# CC-SAT-solver

./: .gitignore  CMakeLists.txt  LICENSE  README.md  doxygen.cfg
doc/: biblio.bib  i5.txt  report.tex  report_i5.csv  report_i5_fl.csv  report_r7.csv  report_r7_fl.csv  table.csv
include/: cc.hpp  clause.hpp  formula.hpp  heap.hpp  max_heap.hpp  min_heap.hpp  node.hpp  sat.hpp  variable.hpp
include/impl/: cc.i.hpp  clause.i.hpp  formula.i.hpp  heap.i.hpp  max_heap.i.hpp  min_heap.i.hpp  node.i.hpp  sat.i.hpp  variable.i.hpp
src/: benchmark.cpp  main.cpp
tests/: test.cpp
utils/: benchmarks_formula.txt  benchmarks_info.txt  lisp_parser.py  smt2_parser.py  test_formula.sh  tptp_parser.py
